[package]
name = "wikipedia"
version = "0.5.0"
authors = ["Sebastian Waisbrot <seppo0010@gmail.com>"]
license-file = "LICENSE"
description = "Access wikipedia articles from Rust"
readme = "README.md"
edition = "2021"
documentation = "https://seppo0010.github.io/wikipedia-rs/"

repository = "https://github.com/seppo0010/wikipedia-rs/"
keywords = ["wikipedia", "api"]

[features]
default = ["http-client", "rustls"]
rustls = ["reqwest/rustls-tls"]
native = ["reqwest/native-tls"]
http-client = ["reqwest", "url"]

[dependencies]
serde_json = "1.0.140"
reqwest = { version = "0.12.15", optional = true, features = [
  "blocking",
], default-features = false }
url = { version = "2.5.4", optional = true }
thiserror = "2.0.12"
